# gs-core

./: .gitignore  ARCHITECTURE.md  DESIGN_DECISIONS.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml
core/: CMakeLists.txt  build.bat  build.ps1  build_wgc_test.bat
core/include/: amf_encoder.h  capture_types.h  dxgi_capture.h  encoder_types.h  iencoder.h  iframe_capture.h  iinput_sender.h  input_handler.h  input_types.h  iwebrtc_host.h  iwebrtc_observer.h  result.h  webrtc_host.h  webrtc_types.h  wgc_capture.h
core/include/util/: ring_buffer.h
core/src/capture/: dxgi_capture.cpp  wgc_capture.cpp
core/src/codec/: amf_encoder.cpp
core/src/input/: input_handler.cpp
core/src/webrtc/: amf_webrtc_encoder.cpp  amf_webrtc_encoder.h  capture_video_source.cpp  capture_video_source.h  webrtc_host.cpp
core/tests/: amf_encoder_unit_test.cpp  capture_types_test.cpp  dxgi_capture_unit_test.cpp  encoder_types_test.cpp  iencoder_test.cpp  iwebrtc_host_test.cpp  result_test.cpp  webrtc_types_test.cpp  wgc_capture_unit_test.cpp
core/tests/input/: input_handler_test.cpp
core/tests/util/: ring_buffer_test.cpp
core/tools/: amf_encode_test.cpp  amf_init_test.cpp  amf_pipeline_test.cpp  capture_test.cpp  fps_loop_test.cpp  input_host_test.cpp  webrtc_test.cpp  wgc_encode_test.cpp  wgc_test.cpp
experiments/: DWM_COMPOSITOR_RESEARCH.md  WGC_RESULTS.md  disable_mpo.ps1  mpo_backup_20260216_174643.reg
experiments/d3d11_test_renderer/: CMakeLists.txt  README.md  build.bat  test_renderer.cpp
experiments/wgc_test/: CMakeLists.txt  README.md  build.bat  wgc_test.cpp
server/: main.py  pyproject.toml
server/static/: test.html
server/tests/: test_signaling.py
web/: input-lab.html
