[tool.poetry]
name        = "gamestream-server"
version     = "0.1.0"
description = "GameStream WebRTC signaling server — Stage 3"
authors     = []
readme      = "README.md"

[tool.poetry.dependencies]
python  = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }

[tool.poetry.group.dev.dependencies]
httpx          = "^0.27"   # async test client for FastAPI
pytest         = "^8.0"
pytest-asyncio = "^0.24"
ruff           = "^0.4"
mypy           = "^1.10"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Quick install without Poetry:
#   pip install fastapi "uvicorn[standard]" httpx pytest pytest-asyncio ruff mypy
# Run:
#   cd server && uvicorn main:app --host 0.0.0.0 --port 8765 --reload
# Lint / type-check:
#   ruff check . && mypy main.py
# Test:
#   pytest tests/

# ---------------------------------------------------------------------------
# ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = [
    "S101",  # allow assert in tests
]

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version      = "3.11"
strict              = true
warn_return_any     = true
warn_unused_ignores = true
